<resources>
    //there are multiple dupilcates, control f before adding!
    <string name="app_name">Custos</string>
    <string name="empty"></string>
    <string name="event_add">+</string>
    <string name="pick_up">request pickup</string>
    <string name="view_event">View Event</string>
    <string name="get_direction">Get Directions</string>
    <string name="set_message">change status</string>
    <string name="set_status">set status</string>
    <string name="title_activity_maps">Map</string>
    <string name="notification">Notifications</string>
    <string name="settings">Settings</string>
    <string name="search_placeholder">Search</string>
    <string name="Report">Report</string>
    <string name="Status">No Status</string>
    <string name="userinfo">User Account</string>
    <string name="login_button_label">Log In</string>
    <string name="signup_button_label">Sign Up</string>
    <string name="username_input_placeholder">Username</string>
    <string name="email_input_placeholder">E-Mail</string>
    <string name="password_input_placeholder">Password</string>
    <string name="confirm_password_input_placeholder">Confirm Password</string>
    <string name="signup_form_label">Create your account</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="delete">Delete</string>
    <string name="_0">0</string>
    <string name="enter_new_safety_pin">Enter new safety pin</string>

    <string name="pinMessage" />
    <string name="contactpage">Contact </string>
    <string name="placeHolderForImage">Placeholder for image</string>
    <string name="confirm">Confirm</string>
    <string name="emergency_contacts_label">Set Emergency Contacts</string>
    <string name="emergency_contacts_name_placeholder">Name</string>
    <string name="emergency_contacts_username_placeholder">Username (optional)</string>
    <string name="emergency_contacts_phone_placeholder">Phone #</string>
    <string name="redo">Redo</string>
    <string name="server_client_id">906240176306-k51e2cmfna5e3fmfuqs2neua7pfcb47t.apps.googleusercontent.com</string>
    <string name="dangerzoneheader">Add Danger Zone</string>
    <string name="plus">+</string>
    <string name="Next"><![CDATA[>]]></string>
    <string name="space"> </string>
    <string name="send_message">Send Message</string>
    <string name="locationheader">Location</string>
    <string name="locationPlaceHolder" />
    <string name="risklevelheader">Risk Level</string>
    <string name="descriptionHeader">Description</string>
    <string name="dangerzonebutton">Submit Danger Zone</string>
    <string name="sethomeloc">Set Home Location</string>
    <string name="setaddress">Set Address</string>
    <string-array name="criticallevelarray">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string name="event_name_placeholder">Name</string>
    <string name="event_description_placeholder">Description</string>
    <string name="event_date_placeholder">Date</string>
    <string name="event_invite_users_button_placeholder">Invite Guests +</string>
    <string name="event_create_event_placeholder">Create Event</string>
    <string name="invite_guests_label_placeholder">Invite Guests</string>
    <string name="submitdangerzone">Submit Danger Zone</string>
    <string name="addContact">Add</string>
    <string name="event_list_label">Events</string>
    <string name="numberContact">Number</string>
    <string name="invite_guests_done_button">Done</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="findFriend">Find Friends</string>
    <string name="ecedit">Edit</string>
    <string name="ecexit">Exit</string>
    <string name="create_event_button">Create</string>
    <string name="ecintial">Add Emergency Contact</string>
    <string name="ecsubmit">Submit</string>
    <string name="login_with_google">LOGIN WITH GOOGLE</string>
    <string name="eventsviewname">Number of Events:</string>
    <string name="membersincename">Installed on:</string>
    <string name="reportsNameXML">Reports</string>
    <string name="time_input_placeholder">Time</string>
    <string name="contactsrReport">Number of Contacts:</string>
    <string name="sharetextforbutton">Share</string>
    <string name="numberOfUsers">Number of Users: </string>
    <string name="settingXML">Settings</string>
    <string name="themeSetting">Theme</string>
    <string name="reportsSetting">Reports</string>
    <string name="light_dark_mode">DARK MODE</string>
    <string name="submit_a_bug">Submit Bug</string>
    <string name="information">Information</string>
    <string name="_120_characters_left">280 Characters Left</string>
    <string name="type_whole_incident_here">Type incident here</string>
    <string name="build_version">Build Version:</string>
    <string name="event_edit_button_label">Edit</string>
    <string name="event_details_title_placeholder">Event Name</string>
    <string name="terms_of_use">Terms of Use?</string>
    <string name="danger_zone">Danger Zone</string>
    <string name="nameDangerZone">Name</string>
    <string name="descriptionDangerZone">Description</string>
    <string name="location_text_switch">LOCATION</string>
    <string name="settings_text">Settings</string>
    <string name="report_a_problem">Report a problem</string>
</resources>
