<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="42dp"
        android:layout_marginBottom="300dp"
        android:onClick="buttonClick"
        android:text="@string/_1" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="29dp"
        android:layout_marginBottom="300dp"
        android:layout_toEndOf="@+id/btn1"
        android:onClick="buttonClick"
        android:text="@string/_2" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="300dp"
        android:layout_toEndOf="@+id/btn2"
        android:onClick="buttonClick"
        android:text="@string/_3" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="42dp"
        android:layout_marginBottom="200dp"
        android:onClick="buttonClick"
        android:text="@string/_4" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="29dp"
        android:layout_marginBottom="200dp"
        android:layout_toEndOf="@+id/btn4"
        android:onClick="buttonClick"
        android:text="@string/_5" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="200dp"
        android:layout_toEndOf="@+id/btn5"
        android:onClick="buttonClick"
        android:text="@string/_6" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="42dp"
        android:layout_marginBottom="100dp"
        android:onClick="buttonClick"
        android:text="@string/_7" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="29dp"
        android:layout_marginBottom="100dp"
        android:layout_toEndOf="@+id/btn7"
        android:onClick="buttonClick"
        android:text="@string/_8" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="100dp"
        android:layout_toEndOf="@+id/btn8"
        android:onClick="buttonClick"
        android:text="@string/_9" />

    <Button
        android:id="@+id/deletesafetypin"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="278dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="32dp"
        android:onClick="deleteNumber"
        android:text="@string/delete" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="31dp"
        android:onClick="buttonClick"
        android:text="@string/_0" />

    <TextView
        android:id="@+id/safety_pin_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:text="@string/enter_new_safety_pin" />

    <TextView
        android:id="@+id/pinmessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="167dp"
        android:layout_marginTop="165dp"
        android:text="@string/pinMessage" />

</RelativeLayout>