<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#1D1D1D">

    <RelativeLayout
        android:id="@+id/cardViewSubmitBug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#212121"
        android:padding="8dp">


        <TextView
            android:id="@+id/imageReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:drawableTop="@drawable/ic_bug_report_yellow_48dp"
            android:gravity="center"
            android:text="@string/submit_a_bug"
            android:textColor="#fece2f"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textCursorDrawable="@color/colorwhite"
            android:textSize="24sp"
            android:textStyle="bold"


            />
        <!--   android:drawableTop="@drawable/ic_assignment_black_24dp"-->



    </RelativeLayout>


    <Button
        android:id="@+id/shareReport"
        android:layout_width="322dp"
        android:layout_height="60dp"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="78dp"
        android:background="#fece2f"
        android:gravity="center"
        android:text="@string/ecsubmit"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="320dp"
        android:layout_height="221dp"
        android:layout_below="@+id/cardViewSubmitBug"
        android:gravity="top|left"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp"
        android:autofillHints="Enter here"
        android:background="@drawable/textbox"
        android:ems="10"
        android:hint="@string/type_whole_incident_here"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <TextView
        android:id="@+id/charactersLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="45dp"
        android:text="@string/_120_characters_left"
        android:textColor="@color/white" />
</RelativeLayout>